# fformation-gco

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: evaluation-personal.cpp  evaluation.cpp
src/: GraphCutsOptimization.cpp  GraphCutsOptimization.h  lua.cpp
